--- a/Aulas/aula-2/receita/mais-coxinhas.html
+++ b/Aulas/aula-2/receita/mais-coxinhas.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<section>
+<header>
     <h1>Muito mais coxinhas...</h1>
 
-    <p>
+    <nav>
         <a href="receita-coxinha.html">Voltar</a>
-    </p>
-</section>
+    </nav>
+</header>
 
 <section>
     <!-- Não faça isso em casa, só para ficar bonito -->
