--- a/Aulas/aula-2/receita/receita-coxinha.html
+++ b/Aulas/aula-2/receita/receita-coxinha.html
@@ -6,25 +6,27 @@
 </head>
 <body>
 
-<section>
+<header>
     <h1>Receita de coxinha</h1>
 
-    <ul>
-        <!-- Não faça isso em casa, só para ficar bonito -->
-        <li style="display: inline-block;">
-            <a href="#ingredientes">Ingredientes</a>
-        </li>
-        <li style="display: inline-block;">
-            <a href="#modo-de-preparo">Modo de preparo</a>
-        </li>
-        <li style="display: inline-block;">
-            <a href="#comentarios">Comentários</a>
-        </li>
-        <li style="display: inline-block;">
-            <a href="mais-coxinhas.html">Muito mais coxinhas...</a>
-        </li>
-    </ul>
-</section>
+    <nav>
+        <ul>
+            <!-- Não faça isso em casa, só para ficar bonito -->
+            <li style="display: inline-block;">
+                <a href="#ingredientes">Ingredientes</a>
+            </li>
+            <li style="display: inline-block;">
+                <a href="#modo-de-preparo">Modo de preparo</a>
+            </li>
+            <li style="display: inline-block;">
+                <a href="#comentarios">Comentários</a>
+            </li>
+            <li style="display: inline-block;">
+                <a href="mais-coxinhas.html">Muito mais coxinhas...</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 
 <section>
     <img src="http://s.glbimg.com/po/rc/media/2014/06/04/11_00_55_179_receita_tradicional_de_coxinha.jpg"
