--- a/aulas/aula-4/app-notification/index.html
+++ b/aulas/aula-4/app-notification/index.html
@@ -24,6 +24,14 @@
 
 <main class="main-content">
 
+    <div class="event-card">
+        <span class="event-card__title">Título</span>
+        <span class="event-card__date">25/05/2016</span>
+        <button class="event-card__share">
+            <i class="ion-ios-upload-outline"></i>
+        </button>
+    </div>
+
     <button class="float-btn">
         <i class="ion-plus-round"></i>
     </button>
