--- a/aulas/aula-6/atividade-4/index.html
+++ b/aulas/aula-6/atividade-4/index.html
@@ -17,7 +17,8 @@
 
     <form class="user-github-search__form">
         <div class="input-group">
-            <input type="text" class="form-control" name="username" placeholder="Digite o nome do usuário do GitHub">
+            <input type="text" class="form-control" name="username" placeholder="Digite o nome do usuário do GitHub"
+                   autofocus>
                 <span class="input-group-btn">
                     <button class="btn btn-default btn-search" type="button">
                         <i class="ion-search"></i>
@@ -29,25 +30,24 @@
 </header>
 
 <main class="user-github-details">
-
     <div class="user-github-details__personal">
         <div class="image"></div>
         <div class="info">
             <ul>
                 <li class="info__name">
-                    <h1>Guilherme Santos</h1>
+                    <h1 class="value"></h1>
                 </li>
-                <li>
+                <li class="info__email">
                     <i class="ion-ios-email-outline"></i>&nbsp;
-                    sntguilherme@gmail.com
+                    <span class="value"></span>
                 </li>
-                <li>
+                <li class="info__site">
                     <i class="ion-earth"></i>
-                    https://br.linkedin.com/in/santosguilherme
+                    <span class="value"></span>
                 </li>
-                <li>
+                <li class="info__company">
                     <i class="ion-briefcase"></i>
-                    Softplan Planejamento de Sistemas LTDA
+                    <span class="value"></span>
                 </li>
             </ul>
         </div>
@@ -55,15 +55,15 @@
 
     <div class="user-github-details__repo">
         <div class="box-repo-detail user-repos">
-            <span class="value">8</span>
+            <span class="value"></span>
             Repositórios
         </div>
         <div class="box-repo-detail user-followers">
-            <span class="value">17</span>
+            <span class="value"></span>
             Seguidores
         </div>
         <div class="box-repo-detail user-following">
-            <span class="value">43</span>
+            <span class="value"></span>
             Seguindo
         </div>
     </div>
@@ -71,12 +71,7 @@
     <div class="user-github-details__bio">
         <label>Bibliografia</label>
 
-        <p>Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi! Não sou faixa
-            preta cumpadi, sou preto inteiris, inteiris. Interessantiss quisso pudia ce receita de bolis, mais bolis eu
-            num gostis. Diuretics paradis num copo é motivis de denguis.
-
-            Casamentiss faiz malandris se pirulitá. Quem manda na minha terra sou Euzis! Pra lá , depois divoltis
-            porris, paradis. Sapien in monti palavris qui num significa nadis i pareci latim. </p>
+        <p></p>
     </div>
 </main>
 
