--- a/aulas/aula-8/atividade-1/index.html
+++ b/aulas/aula-8/atividade-1/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Usuário do GitHub</title>
 
     <link rel="stylesheet" href="lib/bootstrap.min.css"/>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
